@@ -1,7 +1,10 @@
 2013-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* eww.el (eww-submit): Make form submission work.
+
 	* shr.el (shr-descend): Allow other packages to override (or provide)
 	rendering of elements.
+	(shr-expand-url): Strip query strings from URLs before expanding them.
 
 	* eww.el: Don't require cl-lib.
 	(eww-tag-form): Start form support.
